# analize-new

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
src/analize/: __init__.py  app.py  config.py
src/analize/dal/: __init__.py  database.py
src/analize/mcp/: __init__.py  database.py
src/analize/models/: __init__.py  schemas.py
src/analize/processing/: __init__.py  extractor.py  lab_normalizer.py  normalizer.py  test_normalizer.py
src/analize/templates/: base.html  index.html  tests_list.html  timeline.html  upload.html  user_documents.html  user_new.html  user_selection.html  users.html
src/analize/upload/: __init__.py  routes.py
src/analize/users/: __init__.py  routes.py
src/analize/visualization/: __init__.py  routes.py
tests/: __init__.py  conftest.py  test_app.py
